fix: fix alignment of link that holds the credits for owner of sidebar image

--- a/css/style.css
+++ b/css/style.css
@@ -10,10 +10,11 @@
 
 #footer {
     position: absolute;
-    margin-top: 80em;
-    margin-left: 15em;
+    margin-top: 79em;
+    margin-left: 18em;
 
 }
+
 
 .homelander-img {
     position: fixed;
